# pdfrip

./: Cargo.toml
crates/cli-interface/src/: lib.rs
crates/cracker/src/: lib.rs
